--- a/NameCaregiver.html
+++ b/NameCaregiver.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>NameCaregiver</title>
-	<link rel="stylesheet" type="text/css" href="./ChooseCreate.css">
+	<link rel="stylesheet" type="text/css" href="./NameCaregiver.css">
 
 </head>
 <body>
