--- a/ChooseCreate.html
+++ b/ChooseCreate.html
@@ -3,10 +3,11 @@
 <head>
 	<title>Choose Create Page</title>
 	<link rel="stylesheet" type="text/css" href="./ChooseCreate.css">
+	<script type="text/javascript" src="client.js"></script>
 
 </head>
 <body>
-	<button id="choose_btn" type="button">Choose</button>
+	<button id="choose_btn" type="button" onclick= window.location.href='NameCaregiver.html'>Choose</button>
 	<button id="create_btn" type="button">Create</button>
 </body>
 </html>
