Modified css files and consolidated Demographics with NameCareGiver

--- a/ChooseCreate.html
+++ b/ChooseCreate.html
@@ -6,7 +6,7 @@
 
 </head>
 <body>
-	<button id="choose_btn" type="button">Choose</button>
-	<button id="create_btn" type="button">Create</button>
+	<button id="choose_btn" type="button" onclick= window.location.href='Demographics.html'>Choose</button>
+	<button id="create_btn" type="button" onclick= window.location.href='Demographics.html'>Create</button>
 </body>
 </html>
