Added initial story page creation

--- a/Demographics.html
+++ b/Demographics.html
@@ -4,10 +4,11 @@
         
         <title>Demographics</title> 
         <link rel="stylesheet" href="Demographics.css">
+        <img src="nemours-childrens-health-system.jpg" alt="ordering_logo" id="logo">
     </head>
     <form  id="Demographics" class="option" method="GET">
     <body>
-        Name
+        Child's Name
         <input type="text" id="age" name="Age" required><br> 
         Race
         <select name="race" id="Race"  required>
