--- a/NewStory.html
+++ b/NewStory.html
@@ -8,7 +8,7 @@
     <body>
         <form id = "page" class="option" method="POST">
             <input type='file' />
-            <br><img id="myImg" src="#" alt="your image" height=200 width=350>
+            <br><img id="myImg" src="" height= width=>
             <br>
             Caption
             <input type="text" name = "caption" id="Caption"><br>
@@ -22,6 +22,8 @@
       if (this.files && this.files[0]) {
           var img = document.querySelector('img');  // $('img')[0]
           img.src = URL.createObjectURL(this.files[0]); // set src to file url
+          img.height = 200;
+          img.width = 350;
           //console.log(img.src);
           //img.onload = imageIsLoaded; // optional onload event listener
       }
