added head image

--- a/NewStory.html
+++ b/NewStory.html
@@ -3,7 +3,7 @@
     <head>
         <title>Create a new Story</title> 
         <link rel="stylesheet" href="Demographics.css">
-        
+        <img src="nemours-childrens-health-system.jpg" alt="ordering_logo" id="logo">
     </head>
     <body>
         <form id = "page" class="option" method="POST">
@@ -30,7 +30,6 @@
   });
 });
 
-function imageIsLoaded(e) { alert(e); }
 </script>
 </body>
 </html>
