--- a/public/ChooseCreate.html
+++ b/public/ChooseCreate.html
@@ -10,7 +10,7 @@
 	<button id="choose_btn" type="button" onclick= window.location.href='Demographics.html'>Choose</button>
 	<button id="create_btn" type="button" onclick= window.location.href='Demographics.html'>Create</button>
 	<script type="text/javascript" src="client.js"></script>
-	<script src="/socket.io/socket.io.js"></script>
+	<script src="http://localhost:3000/socket.io/socket.io.js"></script>
 
 </body>
 </html>
