Modified home page and added button redirection

--- a/webpages/Demographics.html
+++ b/webpages/Demographics.html
@@ -8,9 +8,23 @@
         <img src="nemours-childrens-health-system-banner.jpg" alt="ordering_logo" >
         <img src="nemours-childrens-health-system.jpg" alt="ordering_logo" >
         </div>
+
+        <script>
+            function choice(){
+                var button1 = document.getElementById("choice1");
+                var button2 = document.getElementById("choice2");
+
+                if (button1.checked){
+                     alert("radio1 selected");
+                }else if (button2.checked) {
+                    alert("Button 2 checked")
+                    return "NewStory.html"
+                }
+            }
+        </script>
     </head>
     <h1>Child Information</h1>
-    <form  id="Demographics" class="option" method="GET">
+    <form  id="Demographics" class="option" method="GET" onsubmit="choice()" action="NewStory.html">
     <body>
         Child's Name
         <input type="text" id="age" name="Age" required><br> 
@@ -44,7 +58,16 @@
             </select>
         <br>
         Caregiver
-        <input type="text" name="caregiver" id="CareGiver" required> <br>
+        <input type="text" name="caregiver" id="CareGiver" required> 
+    <div style="text-align: center"><br>
+        <input type="radio" name="story" id = "choice1" value="Template"> 
+        <label for="choice1">Choose Story Template </label><br>
+    </div>
+    <div style="text-align: center">
+        <input type="radio" name="story" id = "choice2" value="Create"> 
+        <label for="choice2">Create New Story </label><br>
+    </div>
+
         <input type="submit" value="Submit" >
     </form>
     </body>
