--- a/webpages/Templates.html
+++ b/webpages/Templates.html
@@ -26,7 +26,7 @@
             <button id="findStory" onclick = "chooseImage()">Find Story</button>
         </form>
         <br>
-        <img id="proc" src="" class = "center">
+        <img id="proc" src="" height="200" width="200" class = "center">
     
     <script>
         function chooseImage(){
@@ -45,6 +45,7 @@
           if(x == "Surgery") {
             img.src = "example_image.jpg";
           }
+          
           }
 </script>
 </body>
