--- a/public/ChooseCreate.html
+++ b/public/ChooseCreate.html
@@ -9,6 +9,10 @@
 <body>
 	<button id="choose_btn" type="button" onclick= window.location.href='Demographics.html'>Choose</button>
 	<button id="create_btn" type="button" onclick= window.location.href='Demographics.html'>Create</button>
+	<button id="test_btn" type="button"></button>
+
+	<script type="text/javascript" src= "/socket.io/socket.io.js"> </script>
+	<script type="text/javascript" src="client.js"></script>
 
 </body>
 
