addedCreateStory,Frames,methods

--- a/public/Demographics.html
+++ b/public/Demographics.html
@@ -49,7 +49,7 @@
             </select>
             <br>
         Gender <br>
-            <select name="gender" id="gender" required>
+            <select name="gender" id="childGender" required>
                 <option value="Male">Male</option>
                 <option value="Female">Female</option>
             </select>
