--- a/public/Templates.html
+++ b/public/Templates.html
@@ -10,7 +10,7 @@
     }
     
     </style>
-        <title>Select a template</title> 
+        <title>Select a Story</title> 
         <link rel="stylesheet" href="Demographics.css">
         <img src="nemours-childrens-health-system.jpg" alt="ordering_logo" id="logo" class = "center">
         
