--- a/public/storyshow.html
+++ b/public/storyshow.html
@@ -1,18 +1,21 @@
 <!-- code from https://www.w3schools.com/howto/howto_js_slideshow.asp -->
 
 <!-- Slideshow container -->
+    <script src="storyshow.js"></script>
+    <link rel="stylesheet" type="text/css" href="storyshow.css">
+
 <div class="slideshow-container">
 
   <!-- Full-width images with number and caption text -->
   <div class="mySlides fade">
     <div class="numbertext">1 / 3</div>
-    <img src="img1.jpg" style="width:100%">
+    <img src="example_image.jpg" style="width:100%">
     <div class="text">Caption Text</div>
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">2 / 3</div>
-    <img src="img2.jpg" style="width:100%">
+    <img src="example_image_2.jpg" style="width:100%">
     <div class="text">Caption Two</div>
   </div>
 
