--- a/public/Demographics.html
+++ b/public/Demographics.html
@@ -73,7 +73,7 @@
         <label for="choice2">Create New Story </label><br>
     </div>
 
-        <input type="submit" value="Submit" >
+        <input type="submit" id = "childinformation_btn"  value="Submit" ></input>
     </form>
 
     <script type="text/javascript" src= "/socket.io/socket.io.js"> </script>
