--- a/public/storyshow.html
+++ b/public/storyshow.html
@@ -8,21 +8,21 @@
 
   <!-- Full-width images with number and caption text -->
   <div class="mySlides fade">
-    <div class="numbertext">1 / 3</div>
+    <!--<div class="numbertext">1 / 3</div>-->
     <img src="example_image.jpg" style="width:100%">
-    <div class="text">Caption Text</div>
+    <div class="text">Welcome to Nemour, [child's name]</div>
   </div>
 
   <div class="mySlides fade">
-    <div class="numbertext">2 / 3</div>
+    <!--<div class="numbertext">2 / 3</div>-->
     <img src="example_image_2.jpg" style="width:100%">
-    <div class="text">Caption Two</div>
+    <div class="text">You will now undergo [insert procedure]</div>
   </div>
 
   <div class="mySlides fade">
-    <div class="numbertext">3 / 3</div>
-    <img src="img3.jpg" style="width:100%">
-    <div class="text">Caption Three</div>
+    <!--<div class="numbertext">3 / 3</div>-->
+    <img src="patient_room.jpg" style="width:100%">
+    <div class="text">You did a great job, [child's name]!</div>
   </div>
 
   <!-- Next and previous buttons -->
