--- a/public/storyshow.html
+++ b/public/storyshow.html
@@ -37,3 +37,9 @@
   <span class="dot" onclick="currentSlide(2)"></span>
   <span class="dot" onclick="currentSlide(3)"></span>
 </div>
+
+<script type="text/javascript" >
+  window.addEventListener('load', function(){
+    currentSlide(1);
+  });
+</script>
