--- a/public/NewStory.html
+++ b/public/NewStory.html
@@ -13,14 +13,14 @@
         <img src="nemours-childrens-health-system.jpg" alt="ordering_logo" id="logo" class = "center">
     </head>
     <body>
-        <form id = "page" class="option" method="POST">
+        <form id = "page" class="option" method="GET">
             <input type='file' />
             <br><img id="selected_img" src="" class = "center">
             <br>
             Caption
             <input type="text" name = "caption" id="caption_input"><br>
-            <input type="Submit" value="Add Page">
-            <input type="Submit" value="Complete Story">
+            <input type="Submit" id ="addPage_btn" value="Add Page">
+            <input type="Submit" id ="completeStory_btn" value="Complete Story">
         </form>
     
     <script>
