Fixed buffer between image and text

--- a/public/NewStory.html
+++ b/public/NewStory.html
@@ -19,8 +19,8 @@
             <br>
             Caption
             <input type="text" name = "caption" id="caption_input"><br>
-            <input type="Submit" value="Add Page">
-            <input type="Submit" value="Complete Story">
+            <input type="Submit" value="Add Page" onsubmit="addToListOfFrames()">
+            <input type="Submit" value="Complete Story" onsubmit="endStory()">
         </form>
     
     <script>
