--- a/public/storyshow.html
+++ b/public/storyshow.html
@@ -10,19 +10,19 @@
   <div class="mySlides fade">
     <!--<div class="numbertext">1 / 3</div>-->
     <img src="example_image.jpg" style="width:100%">
-    <div class="text">Welcome to Nemour, [child's name]</div>
+    <div ><input type="text" name = "caption1" value="Today, I'm going to go to the clinic with mommy" readonly ></input></div>
   </div>
 
   <div class="mySlides fade">
     <!--<div class="numbertext">2 / 3</div>-->
     <img src="example_image_2.jpg" style="width:100%">
-    <div class="text">You will now undergo [insert procedure]</div>
+    <div ><input type="text" name = "caption2" value="I'm now going to [place] for [procedure]" readonly ></input></div>
   </div>
 
   <div class="mySlides fade">
     <!--<div class="numbertext">3 / 3</div>-->
     <img src="patient_room.jpg" style="width:100%">
-    <div class="text">You did a great job, [child's name]!</div>
+    <div ><input type="text" name = "caption2" value="They told me I did a good job today, I thought so too!" readonly ></input></div>
   </div>
 
   <!-- Next and previous buttons -->
