--- a/public/Templates.html
+++ b/public/Templates.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-    <link rel="stylesheet" href="Templates.css">
     <head>
     
     <style>
@@ -19,7 +18,8 @@
     <body>
         <form id = "page" class="option" method="POST">
             Procedure
-            <select class="mySelect" >
+            <br>
+            <select id="mySelect">
               <option value="Cast">Cast</option>
               <option value="Checkup">Checkup</option>
               <option value="Shot">Shot</option>
