--- a/public/Demographics.html
+++ b/public/Demographics.html
@@ -1,31 +1,57 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        
+        <title>Demographics</title> 
+        <link rel="stylesheet" href="Demographics.css">
+        <div class="logo">
+        <img src="nemours-childrens-health-system-banner.jpg" alt="ordering_logo" >
+        <img src="nemours-childrens-health-system.jpg" alt="ordering_logo" >
+        </div>
 
-<head>
+        <script>
+            function choice(){
+                var button1 = document.getElementById("choice1");
+                var button2 = document.getElementById("choice2");
+                var demo = document.querySelector('#Demographics');  // $('img')[0]
+                
 
-
-    <title>Demographics</title>
-    <link rel="stylesheet" href="Demographics.css">
-    <div class="logo">
-        <img src="nemours-childrens-health-system-banner.jpg" alt="ordering_logo">
-        <img src="nemours-childrens-health-system.jpg" alt="ordering_logo">
-    </div>
-
-</head>
-<div class="form">
+                if (button1.checked){
+                    alert("Chose to work from a template")
+                    demo.action = "Templates.html"
+                }else if (button2.checked) {
+                    alert("Chose to create a new Story")
+                    demo.action = "NewStory.html"
+                }
+            }
+        </script>
+    </head>
     <h1>Child Information</h1>
-    <form id="Demographics" class="option" method="GET" onSubmit="choice()" >
-        <body style="text-align: center">
-            <text>Child's Name </text>
-            <input type="text" id="age" name="Age" required>
+    <form  id="Demographics" class="option" method="GET" onsubmit="choice()" >
+    <body>
+        Child's Name
+        <input type="text" id="childName" name="childName" required><br>
+        Child's Age 
+        <input type="text" id="childAge" name="childAge" required><br>
+        Race
+        <select name="race" id="race"  required>
+            <option value="Black or African American">Black or African American</option>
+            <option value="American Indian or Alaska Native">American Indian or Alaska Native</option>
+            <option value="Asian">Asian</option>
+            <option value="Native Hawaiian or Other Pacific Islander">Native Hawaiian or Other Pacific Islander</option>
+            <option value="White">White</option> 
+        </select>
+        <br>
+        Ethnicity
+            <select name="ethnicity" id="ethnicity"  required>
+                    <option value="Hispanic or Latino or Spanish Origin">Hispanic or Latino or Spanish Origin</option>
+                    <option value="Not Hispanic or Latino or Spanish Origin">Not Hispanic or Latino or Spanish Origin</option>
+            </select>
             <br>
-            Caregiver's Name
-            <input type="text" name="parentname" id="parentName" required> <br>
-            Child's Gender
-            <select name="gender" id="dropdown" width="100%" required>
+        Gender <br>
+            <select name="gender" id="childGender" required>
                 <option value="Male">Male</option>
                 <option value="Female">Female</option>
-<<<<<<< HEAD
             </select>
         <br>
         Parent Name
@@ -49,47 +75,9 @@
     </div>
 
         <input type="submit" id = "childinformation_btn"  value="Submit" ></input>
-=======
-            </select><br>
-            Child's Age
-            <select name="age" id="dropdown" required>
-                <option value="Infant">Infant</option>
-                <option value="Child">Child</option>
-                <option value="Teen">Teen</option>
-                <option value="Adult">Adult</option>
-            </select><br>
-            Child's Race
-            <select name="race" id="dropdown" required>
-                <option value="Black or African American">Black or African American</option>
-                <option value="American Indian or Alaska Native">American Indian or Alaska Native</option>
-                <option value="Asian">Asian</option>
-                <option value="Native Hawaiian or Other Pacific Islander">Native Hawaiian or Other Pacific Islander
-                </option>
-                <option value="White">White</option>
-            </select><br>
-            <div style="text-align: center">
-                <input type="submit" name="story" id="choice1" value="Choose Story">
-                <input type="submit" name="story" id="choice2" value="Create Story">
-            </div>
->>>>>>> c5b94c7d0a90641fe7c8d0d5d596a5692320ea94
     </form>
 
-    <script>
-        function chooseStory(){
-        var demo = document.querySelector('#Demographics');
-        demo.action = "Templates.html";
-       }
-       function createNew() {
-        var demo = document.querySelector('#Demographics');
-        demo.action = "NewStory.html";
-       }
-
-        document.getElementById("choice1").addEventListener("click", chooseStory);
-        document.getElementById("choice2").addEventListener("click", createNew);
-
-    </script>
-
+    <script type="text/javascript" src= "/socket.io/socket.io.js"> </script>
+    <script type="text/javascript" src="client.js"></script>
     </body>
-</div>
-
 </html>
