--- a/public/Templates.html
+++ b/public/Templates.html
@@ -28,7 +28,7 @@
             <button id="findStory" type="button" onclick = "chooseImage()">Find Story</button>
         </form>
         <br>
-        <img id="proc" src="" onclick= window.location.href='storyshow.html'  class = "center">
+        <img id="proc" src="" class = "center">
         <br>
         <p id="caption" style = "text-align:center;">Test</p>
     
@@ -61,7 +61,6 @@
           document.getElementById('caption').innerHTML = string;
           
           }
-
 </script>
 </body>
 </html>
