--- a/public/Templates.html
+++ b/public/Templates.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-    <link rel="stylesheet" href="Templates.css">
     <head>
     
     <style>
@@ -28,7 +27,7 @@
             <button id="findStory" type="button" onclick = "chooseImage()">Find Story</button>
         </form>
         <br>
-        <img id="proc" src="" onclick= window.location.href='storyshow.html'  class = "center">
+        <img id="proc" src="" class = "center">
         <br>
         <p id="caption" style = "text-align:center;">Test</p>
     
