--- a/public/Templates.html
+++ b/public/Templates.html
@@ -18,7 +18,7 @@
     <body>
         <form id = "page" class="option" method="POST">
             Procedure
-            <select class="mySelect" >
+            <select id="mySelect" >
               <option value="Cast">Cast</option>
               <option value="Checkup">Checkup</option>
               <option value="Shot">Shot</option>
