--- a/public/Templates.html
+++ b/public/Templates.html
@@ -17,7 +17,7 @@
     </head>
     <body>
         <form id = "page" class="option" method="POST">
-            Procedure
+            Procedure<br>
             <select id="mySelect" >
               <option value="Cast">Cast</option>
               <option value="Checkup">Checkup</option>
