--- a/public/storyshow.html
+++ b/public/storyshow.html
@@ -4,11 +4,27 @@
     <script src="storyshow.js"></script>
     <link rel="stylesheet" type="text/css" href="storyshow.css">
 
+<h1 id=story_head >[Child]'s Story</h1>
+
+<style> 
+body{
+  background: rgb(0,232,255);
+  background: linear-gradient(90deg, rgba(0,232,255,1) 0%, rgba(255,255,255,1) 30%, rgba(255,255,255,1) 70%, rgba(0,232,255,1) 100%);
+} 
+
+h1 {
+  text-align:center;
+  font-family:verdana;
+}
+
+</style>
+
+<body>
 <div id = "hold_slideshow" class="slideshow-container">
 <div class="mySlides fade">
     <!--<div class="numbertext">1 / 3</div>-->
     <img src="example_image.jpg" style="width:100%">
-    <div class="text">Welcome to Nemour, [child's name]</div>
+    <div class="text">Welcome to Nemours, [child's name]</div>
   </div>
 
   <div class="mySlides fade">
@@ -26,14 +42,15 @@
   <!-- Next and previous buttons -->
   <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
   <a class="next" onclick="plusSlides(1)">&#10095;</a>
-  
+</div>
+
+<div style="text-align:center">
   <span class="dot" onclick="currentSlide(1)"></span>
   <span class="dot" onclick="currentSlide(2)"></span>
   <span class="dot" onclick="currentSlide(3)"></span>
-  <span class="dot" onclick="currentSlide(4)"></span>
-  <span class="dot" onclick="currentSlide(5)"></span>
-  <span class="dot" onclick="currentSlide(6)"></span>
-</div>
+  </div>
+
+</body>
 
 
 <script type="text/javascript" >
