--- a/public/storyshow.html
+++ b/public/storyshow.html
@@ -24,19 +24,22 @@ h1 {
 <div class="mySlides fade">
     <!--<div class="numbertext">1 / 3</div>-->
     <img src="example_image.jpg" style="width:100%">
-    <div class="text">Welcome to Nemours, [child's name]</div>
+    <div style="background: rgb(0,232,255);
+    background: linear-gradient(90deg, rgba(0,232,255,1) 0%, rgba(255,255,255,1) 30%, rgba(255,255,255,1) 70%, rgba(0,232,255,1) 100%);"><input type = "text" name="caption1" value="Today, I'm going to the clinic!" readonly></input> </div>
   </div>
 
   <div class="mySlides fade">
     <!--<div class="numbertext">2 / 3</div>-->
     <img src="example_image_2.jpg" style="width:100%">
-    <div class="text">You will now undergo [insert procedure]</div>
+    <div style="background: rgb(0,232,255);
+    background: linear-gradient(90deg, rgba(0,232,255,1) 0%, rgba(255,255,255,1) 30%, rgba(255,255,255,1) 70%, rgba(0,232,255,1) 100%);"><input type = "text" name="caption2" value="Now I'm going to [Procedure] with mommy" readonly></input> </div>
   </div>
 
   <div class="mySlides fade">
     <!--<div class="numbertext">3 / 3</div>-->
     <img src="patient_room.jpg" style="width:100%">
-    <div class="text">You did a great job, [child's name]!</div>
+    <div style="background: rgb(0,232,255);
+    background: linear-gradient(90deg, rgba(0,232,255,1) 0%, rgba(255,255,255,1) 30%, rgba(255,255,255,1) 70%, rgba(0,232,255,1) 100%);"><input type = "text" name="caption3" value="The Nurse said I did a great job today, I think so too!" readonly></input> </div>
   </div>
 
   <!-- Next and previous buttons -->
