--- a/public/Demographics.html
+++ b/public/Demographics.html
@@ -17,24 +17,24 @@
     <form id="Demographics" class="option" method="GET" onSubmit="choice()" >
         <body style="text-align: center">
             <text>Child's Name </text>
-            <input type="text" id="age" name="Age" required>
+            <input type="text" id="childName" name="childname" required>
             <br>
             Caregiver's Name
-            <input type="text" name="parentname" id="parentName" required> <br>
+            <input type="text" name="caregiverName" id="parentName" required> <br>
             Child's Gender
-            <select name="gender" id="dropdown" width="100%" required>
+            <select name="gender" id="gender_dropdown" width="100%" required>
                 <option value="Male">Male</option>
                 <option value="Female">Female</option>
             </select><br>
             Child's Age
-            <select name="age" id="dropdown" required>
+            <select name="age" id="age_dropdown" required>
                 <option value="Infant">Infant</option>
                 <option value="Child">Child</option>
                 <option value="Teen">Teen</option>
                 <option value="Adult">Adult</option>
             </select><br>
             Child's Race
-            <select name="race" id="dropdown" required>
+            <select name="race" id="race_dropdown" required>
                 <option value="Black or African American">Black or African American</option>
                 <option value="American Indian or Alaska Native">American Indian or Alaska Native</option>
                 <option value="Asian">Asian</option>
@@ -47,11 +47,30 @@
                 <input type="submit" name="story" id="choice2" value="Create Story">
             </div>
     </form>
+    <script type="text/javascript" src= "/socket.io/socket.io.js"> </script>
 
     <script>
+        var child_name = document.getElementById('childName');
+        var caregiver_name = document.getElementById('caregiverName');
+        var gender_dropdown = document.getElementById('gender_dropdown');
+        var age_dropdown = document.getElementById('age_dropdown');
+        var race_dropdown = document.getElementById('race_dropdown');
+
         function chooseStory(){
         var demo = document.querySelector('#Demographics');
         demo.action = "Templates.html";
+
+        var childinfo = {
+            "childname":child_name.value,
+            "caregivername":caregiver_name.value,
+            "childgender":gender_dropdown.value,
+            "childage":age_dropdown.value,
+            "childrace":race_dropdown
+        };
+        
+        //Stores the child's info locally
+        localStorage.setItem('childinfo', JSON.stringify(childinfo));
+        
        }
        function createNew() {
         var demo = document.querySelector('#Demographics');
@@ -60,6 +79,8 @@
         document.getElementById("choice1").addEventListener("click", chooseStory);
         document.getElementById("choice2").addEventListener("click", createNew);
     </script>
+
+    <script type="text/javascript" src="client.js"></script>
 
     </body>
 </div>
