--- a/public/storyshow.html
+++ b/public/storyshow.html
@@ -8,7 +8,7 @@
 <div class="mySlides fade">
     <!--<div class="numbertext">1 / 3</div>-->
     <img src="example_image.jpg" style="width:100%">
-    <div class="text">Welcome to Nemour, [child's name]</div>
+    <div class="text" id="welcometonemours">Welcome to Nemour, </div>
   </div>
 
   <div class="mySlides fade">
@@ -20,13 +20,13 @@
   <div class="mySlides fade">
     <!--<div class="numbertext">3 / 3</div>-->
     <img src="patient_room.jpg" style="width:100%">
-    <div class="text">You did a great job, [child's name]!</div>
+    <div class="text" id ="didgoodjob">You did a great job, </div>
   </div>
 
   <!-- Next and previous buttons -->
   <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
   <a class="next" onclick="plusSlides(1)">&#10095;</a>
-  
+
   <span class="dot" onclick="currentSlide(1)"></span>
   <span class="dot" onclick="currentSlide(2)"></span>
   <span class="dot" onclick="currentSlide(3)"></span>
@@ -39,9 +39,22 @@
 <script type="text/javascript" >
   window.addEventListener('load', function(){
     currentSlide(1);
+    includingAttributes();
+
 
    // generateSlide(10);
   });
+
+  function includingAttributes(){
+    var welcometonemours = document.getElementById('welcometonemours');
+    var didgoodjob = document.getElementById('didgoodjob');
+    var childinfo = localStorage.getItem('childinfo');
+    console.log(childinfo);
+    welcometonemours.innerHTML +=childinfo.childname;
+    didgoodjob.innerHTML+= childinfo.childname;
+
+
+  };
 
   // function generateSlide(int n){
   //   var hold_slideshow = document.getElementById("hold_slideshow");
