--- a/public/index.html
+++ b/public/index.html
@@ -78,6 +78,16 @@
 
       var root =firebase.database().ref('team12-8c377');
       console.log(root);
+      // function writeUserData(userId, name, email, imageUrl) {
+      //   firebase.database().ref('users/' + userId).set({
+      //     username: name,
+      //     email: email,
+      //     profile_picture : imageUrl
+      //   });
+      // }
+
+      // writeUserData('300','john','john@udel.edu','imgpath');
+
     </script>
   </body>
 
