--- a/public/Templates.html
+++ b/public/Templates.html
@@ -13,6 +13,28 @@
         <title>Select a Story</title> 
         <link rel="stylesheet" href="Demographics.css">
         <img src="nemours-childrens-health-system.jpg" alt="ordering_logo" id="logo" class = "center">
+
+                <script src="https://www.gstatic.com/firebasejs/7.0.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.0.0/firebase-database.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+         https://firebase.google.com/docs/web/setup#available-libraries -->
+
+    <script>
+      // Your web app's Firebase configuration
+      var firebaseConfig = {
+        apiKey: "AIzaSyB24TpKl6QsUAPNEDhe-jfAoH_0D5jUPc0",
+        authDomain: "team12-8c377.firebaseapp.com",
+        databaseURL: "https://team12-8c377.firebaseio.com",
+        projectId: "team12-8c377",
+        storageBucket: "team12-8c377.appspot.com",
+        messagingSenderId: "430711974203",
+        appId: "1:430711974203:web:0d4f12e62e92df4b762f1e"
+      };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
+
         
     </head>
     <body>
