--- a/public/storyshow.html
+++ b/public/storyshow.html
@@ -18,6 +18,27 @@ h1 {
 </style>
 
 <body>
+
+          <script src="https://www.gstatic.com/firebasejs/7.0.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.0.0/firebase-database.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+         https://firebase.google.com/docs/web/setup#available-libraries -->
+
+    <script>
+      // Your web app's Firebase configuration
+      var firebaseConfig = {
+        apiKey: "AIzaSyB24TpKl6QsUAPNEDhe-jfAoH_0D5jUPc0",
+        authDomain: "team12-8c377.firebaseapp.com",
+        databaseURL: "https://team12-8c377.firebaseio.com",
+        projectId: "team12-8c377",
+        storageBucket: "team12-8c377.appspot.com",
+        messagingSenderId: "430711974203",
+        appId: "1:430711974203:web:0d4f12e62e92df4b762f1e"
+      };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
 <div id = "hold_slideshow" class="slideshow-container">
 <div class="mySlides fade">
     <!--<div class="numbertext">1 / 3</div>-->
@@ -58,21 +79,30 @@ h1 {
 
 
 <script type="text/javascript" >
+  function includingAttributes(){
+    var welcometonemours = document.getElementById('welcometonemours');
+    //var didgoodjob = document.getElementById('didgoodjob');
+
+    var childname = sessionStorage.getItem("childname");
+    var childage = sessionStorage.getItem("childage");
+
+    //var fullchildinfo = firebase.database().ref('children/' + childname +childage);
+
+
+
+    console.log(sessionStorage);
+    welcometonemours.innerHTML +=childname;
+    //didgoodjob.innerHTML+= childname;
+  };
+
   window.addEventListener('load', function(){
     currentSlide(1);
     includingAttributes();
   });
 
-  function includingAttributes(){
-    var welcometonemours = document.getElementById('welcometonemours');
-    var didgoodjob = document.getElementById('didgoodjob');
-    var childinfo = localStorage.getItem('childinfo');
-    console.log(childinfo);
-    welcometonemours.innerHTML +=childinfo.childname;
-    didgoodjob.innerHTML+= childinfo.childname;
+  
 
 
-  };
 
   // function generateSlide(int n){
   //   var hold_slideshow = document.getElementById("hold_slideshow");
